# midicvt

./: .gitignore  ChangeLog  INSTALL  LICENSE  Makefile.am  README.md  TODO  bootstrap  configure.ac  midicvt-master-0.4.1-stable.tar.xz  pack  strap_functions
contrib/: Dixie04.txt  annotate-reverse.txt  annotate.txt  sysex-format.txt  test.awk  test.pl
contrib/dd-11/: DD11E.txt  dd.txt
contrib/etc/: DIR_COLORS
contrib/pss-790/: ancestor.txt  cbflite.txt  old_love.txt
contrib/yoshimi/: README
data/: Makefile.am
debian/: Notes  README  README.Debian  TODO  changelog  control  copyright  docs  midicvt-dev.dirs  midicvt-dev.install  midicvt.dirs  midicvt.doc-base  midicvt.install  rules
doc/: MIDI-Maps.ods  repositories.txt  seq24-trailer.txt
doc/dox/: Makefile.am  README  doxy-reference.cfg  doxy-userman.cfg  mainpage-reference.dox  mainpage-userman.dox  make_dox  midicvt_file_format.dox  midicvt_license.dox  midicvt_midi_to_midi.dox  midicvt_usage.dox
include/: midicvt-config.h
legacy/: midicomp.c  midicvt_main_getopt.c
libmidifilex/: Makefile.am
libmidifilex/dox/: midi_functions.dox
libmidifilex/include/: Makefile.am  VERSION.h  midicvt_base.h  midicvt_cc.h  midicvt_globals.h  midicvt_helpers.h  midicvt_m2m.h  midicvt_macros.h  midifilex.h  t2mf.h
libmidifilex/src/: Makefile.am  lex.yy.c  midicvt_base.c  midicvt_cc.c  midicvt_globals.c  midicvt_helpers.c  midicvt_m2m.c  midifilex.c  t2m_no_flex.c  t2mf.fl
libmidipp/: Makefile.am
libmidipp/dox/: midipp_functions.dox
libmidipp/include/: Makefile.am  csvarray.hpp  ininames.hpp  initree.hpp  iniwriting.hpp  midimapper.hpp  stringmap.hpp
libmidipp/src/: Makefile.am  csvarray.cpp  initree.cpp  iniwriting.cpp  midimapper.cpp  stringmap.cpp
m4/: Makefile.am  README
man/: Makefile.am  midicvt.1
midicvt/: Makefile-midicomp  Makefile.am  midicvt_main.c
midicvt/dox/: midicvt_introduction.dox
midicvtpp/: Makefile.am  midicvtpp_main.cpp  s.asc  s.mid  stomtors-m2m.asc  stomtors-m2m.mid  stomtors-multi.asc  stomtors-multi.mid
tests/: README  test_script  test_script.old
tests/csvfiles/: GM_DD-11_Drums.csv  GM_PSS-790_Drums.csv  GM_PSS-790_Patches.csv
tests/inifiles/: GM-excerpt-original.ini  GM-excerpt.ini  GM_DD-11_Drums.ini  GM_PSS-790_Drums-simple.ini  GM_PSS-790_Drums.ini  GM_PSS-790_Multi.ini  GM_PSS-790_Patches.ini
tests/midifiles/: README  b4uacuse-GM-format.hex  b4uacuse-GM-format.midi  b4uacuse-new-format.midi  b4uacuse-non-mtrk.midi  b4uacuse-seq24.asc  b4uacuse.asc
tests/results/: CountryStrum-recompiled.mid  Dixie04-sysex-error.asc  README  allofarow.asc  choo2xg-recompiled.mid  ex1-mthd.asc  ex1-recompiled-report.txt  ex1-recompiled.mid  ex1-recompiled.xxd  ex1-report.txt  ex1.xxd  example1-b.asc  example2-recompiled.mid  mrroboto_with_lyrics.asc  wonworld-recompiled.mid
tests/results/stomtors/: stomtors-drums-10.asc  stomtors-drums-10.mid  stomtors-drums-16.asc  stomtors-drums-16.mid  stomtors-m2m.xxd  stomtors.xxd
tests/stomtors/: stomtors.mid  stomtors.txt
