#*******************************************************************************
# Makefile.am (man)
#-------------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	midicvt
# \author     	Chris Ahlstrom
# \date       	2016-05-28
# \update      2016-05-28
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
#     This module provides an Automake makefile for midicvt's main 'man'
#     directory.
#
#-------------------------------------------------------------------------------

AUTOMAKE_OPTIONS = foreign dist-zip dist-bzip2
MAINTAINERCLEANFILES = Makefile.in Makefile

PACKAGE = @PACKAGE@
VERSION = @VERSION@

#*******************************************************************************
# EXTRA_DIST
#-------------------------------------------------------------------------------

EXTRA_DIST =

#*******************************************************************************
# dist
#-------------------------------------------------------------------------------

dist_man_MANS = midicvt.1

#******************************************************************************
# Makefile.am (man)
#------------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=automake
#------------------------------------------------------------------------------
